# query

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  Diagrama sin título.drawio  LICENSE  README.md  deno.json  install-unix.sh  install-window.ps1  poem.txt  rust-toolchain.toml
.cargo/: config.toml  credentials.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  ci.sh
.github/workflows/: ci.yaml  dev.yaml  prod.yaml  publish.yaml
dev/: build.sh  rusty_fetcher.drawio
doc/: build.sh  guide.md
docs/concepts/: feature.md
lib/: npm.js  package-lock.json  package.json  query.js  tsconfig.json
npm/: guide.md
npm/wasm/: package.json
playground/: deps.ts  endpoint.ts  fetchy.json  main.js  main.ts
src/: base_url.rs  config.rs  main.rs  methods.rs  run.rs
src/utils/: models.rs
test/: doc.js  endpoint.js  exmaple_test.rs  main.js  main_test.rs  query.json  routes.js  test.rs
