[package]
name = "fetchy"
version = "0.1.0"
authors = ["castrogarciajs"]
license = "MIT"
description = "Rusty Fetcher is a CLI too"
repository = "https://github.com/castrogarciajs/fetchy"
edition = "2021"

[[bin]]
name = "fetchy"
path = "bin/main.rs"
doc = false

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
serde = "1.0.189"
serde_json = "1.0.107"
