[package]
name = "fetchy"
version = "0.1.0"
authors = ["castrogarciajs"]
license = "MIT"
description = "Rusty Fetcher is a CLI too"
repository = "https://github.com/castrogarciajs/fetchy"
edition = "2021"

[[bin]]
name = "fetchy"
path = "bin/main.rs"
doc = false

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107", default-features = false, features = ["alloc"] }
tokio = { version = "1.33.0", features = ["full"] }

