[package]
name = "query"
version = "0.2.8"
authors = ["castrogarciajs"]
license = "MIT"
description = "Query CLI to do request http"
repository = "https://github.com/castrogarciajs/fetchy"
edition = "2021"


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107", default-features = false, features = ["alloc"] }
tokio = { version = "1.33.0", features = ["full"] }

